--- a/css/shared/films-section.css
+++ b/css/shared/films-section.css
@@ -19,7 +19,7 @@
 .films-section__msg-title {
   font-size: 1.28rem;
   font-weight: 700;
-  color: rgba(46, 46, 47, 1);
+  color: rgba(120, 120, 120, 1);
 }
 
 .films-section__msg-icon {
@@ -33,4 +33,25 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+}
+
+.films-section__watchlist-msg-area {
+  flex-direction: column;
+}
+
+.films-section__msg-add {
+  background: none;
+  border: none;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: inherit;
+  gap: 1rem;
+  font-weight: 700;
+  cursor: pointer;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
